# DMC24-calculator

./: pyproject.toml  requirements.txt
src/calculator/: __main__.py  app.py
src/calculator/models/: calculate_request.py
src/calculator/routers/: calculate.py
tests/: test_basic.py  test_calculator.py
